Mon Jan 07 19:47:36 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: New script (taken from flax) to download the
	  xapian tarballs and unpack them, ready to be built.
	* libs/*.tgz: Remove the tarballs from svn - they were too big to
	  be kept here.  They're now hosted on the googlecode download
	  area, which should be as reliable as the googlecode svn server.
	* utils/make_xappy_tarballs: Update with new version numbers.

Mon Jan 07 16:59:22 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update version numbers for latest
	  branch updates, to build new tarballs.

Mon Dec 31 13:09:33 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py,xappy/searchconnection_doctest1.txt:
	  Test opening of a database which doesn't exist, and set _index to
	  None in class initialiser to avoid assertion error when calling
	  close() from __del__() in this situation.

Mon Dec 17 09:28:01 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add _cluster method, and
	  _reorder_by_clusters() method.

Mon Dec 10 19:46:25 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update to apply the changes in the
	  clustering branch.

Mon Dec 10 19:45:30 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add ability to restrict the reordering
	  to just use specific fields, and to use approximations for the
	  termfreqs to speed it up.

Mon Dec 10 17:19:34 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Remove accidentally committed
	  debugging prints.

Mon Dec 10 17:18:34 GMT 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Add (experimental)
	  _reorder_by_similarity() method to SearchResults.

Thu Dec 06 16:53:23 GMT 2007  Richard Boulton <richard@lemurconsulting.com>
