@@ -43,21 +43,21 @@ import zipfile
 #    (relative to install dir)  (with unix-style slashes, and globs)
 archives = (
     ('Xapian core',
-     'http://xappy.googlecode.com/files/xapian-core-9966.tgz',
+     'http://xappy.googlecode.com/files/xapian-core-9974.tgz',
      'xapian-core.tgz',
-     'a0b74296cc58dff45c2098cb2d0fcd7792de61c1',
+     'd49404fa3a7ae5a66668b31fb83e76ba40064d21',
      (),
     ),
     ('Xapian bindings',
-     'http://xappy.googlecode.com/files/xapian-bindings-9966.tgz',
+     'http://xappy.googlecode.com/files/xapian-bindings-9974.tgz',
      'xapian-bindings.tgz',
-     '14445b795caaf4b0f22b6bac1649d0b3898e2ba0',
+     'd3ae4d502f4cad5a1b32ae7ee4274a35beb751cf',
      (),
     ),
     ('Xapian win32 build system',
-     'http://xappy.googlecode.com/files/win32msvc-9966.tgz',
+     'http://xappy.googlecode.com/files/win32msvc-9974.tgz',
      'win32msvc.tgz',
-     '48ac176fa738d4117a7d8f3cfdf4af12bb01c09f',
+     '2875dd29ccfa1064d6764acc9736b87c2f147fdb',
      (),
     ),
 )
